# api-gateway-poc

./: .gitignore  README.md  hypercorn.toml  pyproject.toml
docker/: docker-compose.srv.yml  docker-compose.test.yml  docker-compose.yml  fastapi.dockerfile
gateway/: envoy-conf.yaml  traefik.toml  traefik_dynamic.toml
policy/: api_authz.rego
src/: auth_main.py  fastapi_main.py
src/auth_service/: main.py
src/fastapi_service/: main.py
src/shared/: __init__.py
